--- a/css/index.css
+++ b/css/index.css
@@ -513,4 +513,5 @@ footer {
     font-weight: normal;
     font-style: italic;
     font-family: "NotoSansArmenian-bold";
+    margin-top: -20px;
 }
