--- a/css/index.css
+++ b/css/index.css
@@ -514,4 +514,5 @@ footer {
     font-style: italic;
     font-family: "NotoSansArmenian-bold";
     margin-top: -20px;
+    margin-bottom: -10px;
 }
