--- a/css/index.css
+++ b/css/index.css
@@ -440,11 +440,17 @@ header {
 }
 .map_block {
     width: 45%;
-    height: 700px;
+    height: auto;
 }
 .map {
     width: 100%;
     height: 100%;
+}
+.about_us_masin {
+    font-family: NotoSansArmenian-medium;
+    font-size: 18px;
+    font-weight: normal;
+    color: black;
 }
 /* about_us end */
 
@@ -531,9 +537,4 @@ footer {
     margin-top: -20px;
     margin-bottom: -10px;
 }
-.about_us_masin {
-    font-family: NotoSansArmenian-medium;
-    font-size: 18px;
-    font-weight: normal;
-    color: black;
-}
+
