--- a/css/index_media.css
+++ b/css/index_media.css
@@ -24,7 +24,7 @@
     }
     .map_block {
         width: 100%;
-        height: 400px;
+        height: auto;
     } 
     .map_block .map iframe {
         width: 100%;
@@ -165,7 +165,7 @@
         height: 200px;
     }
     .map_block {
-        height: 200px;
+        height: auto;
     }
     .map_block .map iframe {
         height: 200px;
