--- a/css/index.css
+++ b/css/index.css
@@ -538,3 +538,39 @@ footer {
     margin-bottom: -10px;
 }
 
+
+
+.coment_info {
+    width: 262px;
+    height: 146px;
+    background-color: #FFFFFF;
+    border: 1px solid #EBEBEB;
+    transition: all 300ms ease-out;
+    padding: 16px 13px;
+}
+.coment_name_star {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+    margin-bottom: 6px;
+}
+.coment_info_text {
+    font-family: "NotoSansArmenian-medium";
+    font-style: normal;
+    font-weight: normal;
+    font-size: 11px;
+    text-transform: capitalize;
+    color: #333333;
+}
+.coment_name_star span {
+    font-family: "NotoSansArmenian-bold";
+    font-style: normal;
+    font-weight: bold;
+    font-size: 14px;
+    text-transform: capitalize;
+    color: #000000;
+}
+.star_block {
+    display: flex;
+    gap: 7px;
+}
