--- a/css/index.css
+++ b/css/index.css
@@ -542,7 +542,7 @@ footer {
 
 .coment_info {
     width: 262px;
-    height: 146px;
+    height: auto;
     background-color: #FFFFFF;
     border: 1px solid #EBEBEB;
     transition: all 300ms ease-out;
@@ -573,4 +573,9 @@ footer {
 .star_block {
     display: flex;
     gap: 7px;
+}
+.coment_slide_block {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
