--- a/css/index.css
+++ b/css/index.css
@@ -578,4 +578,6 @@ footer {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    column-gap: 20px;
+    row-gap: 20px;
 }
