--- a/css/index.css
+++ b/css/index.css
@@ -97,7 +97,7 @@ header {
 /* main */
 /* welcome section */
 .welcome_section {
-    background-color: orangered;
+    background-color: #b0b1b3;
     width: 100%;
     height: 100vh;
 }
