--- a/css/index.css
+++ b/css/index.css
@@ -548,6 +548,10 @@ footer {
     transition: all 300ms ease-out;
     padding: 16px 13px;
 }
+.coment_info:hover {
+    box-shadow: 0px 4px 50px rgb(0 0 0 / 15%);
+    transition: all 300ms ease-in;
+}
 .coment_name_star {
     display: flex;
     justify-content: space-between;
