--- a/css/index.css
+++ b/css/index.css
@@ -100,6 +100,7 @@ header {
     background-color: #b0b1b3;
     width: 100%;
     height: 100vh;
+    background-image: url(../img/unnamed.png);
 }
 .welcome_title_info_block {
     padding: 100px 0 0 150px;
