--- a/css/index.css
+++ b/css/index.css
@@ -101,6 +101,8 @@ header {
     width: 100%;
     height: 100vh;
     background-image: url(../img/unnamed.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
 .welcome_title_info_block {
     padding: 100px 0 0 150px;
