--- a/css/index.css
+++ b/css/index.css
@@ -29,7 +29,7 @@ html {
 }
 body {
     min-width: 280px;
-    max-width: 1920px;
+    /* max-width: 1920px; */
     margin: 0 auto;
     overflow-x: hidden;
 }
@@ -50,7 +50,7 @@ appearance: none;
 header {
     position: sticky;
     z-index: 100;
-    max-width: 1920px;
+    /* max-width: 1920px; */
     width: 100%;
     left: 0;
     top: 0;
